fix: prevent overflowing texts

--- a/app/modules/components/detail/header/detail-header.scss
+++ b/app/modules/components/detail/header/detail-header.scss
@@ -105,6 +105,7 @@
     .detail-subject {
         color: $color-black900;
         flex-grow: 1;
+        word-break: break-all;
     }
     .edit-title-input {
         font-size: 1.2rem;
